# iLab_Group12

./: Makefile  README.md  pyproject.toml
STApp/: Dockerfile  requirements.txt
STApp/app/: main.py
STApp/models/: Custom_model.joblib
docs/: mkdocs.yml
docs/docs/: index.md
ilab_group12/: __init__.py  dataset.py  features.py  plots.py
ilab_group12/modeling/: predict.py  train.py
notebooks/Deployment/: CustomDataModel.ipynb  CustomDataModelXGBoost.ipynb  ExtractandPredict.ipynb  NewData.ipynb  NewDataPD.ipynb  RFSMOTE.ipynb  RFSMOTEXGB.ipynb  extracted_features.csv  extracted_featuresPD.csv  gradiotest.ipynb  ipywidgetstest.ipynb
notebooks/EDA/: EDA.ipynb
notebooks/Feature Extraction/: BigFeatureExtract.ipynb  ExtractandPredict.ipynb  LibrosaTest.ipynb  ParselmouthTest.ipynb  pd_speech_features_IG.ipynb  pyAudioAnalysisTest.ipynb  pyAudioAnalysisTest_MFCC.ipynb
notebooks/Feature Reduction/: pd_speech_features_IG_PCA_SensitivityAnalysis.ipynb
notebooks/Models/: iLab_Clustering_KMeans_New.ipynb  iLab_Modeling_KNC.ipynb  iLab_Modeling_KNC_New.ipynb  iLab_Modeling_KNC_with_Transform_New.ipynb  iLab_Modeling_LR.ipynb  iLab_Modeling_LR_New.ipynb  iLab_Modeling_LR_with_Transform_New.ipynb  iLab_Modeling_RFC.ipynb  iLab_Modeling_RFC_New.ipynb  iLab_Modeling_RFC_New_Smote.ipynb  iLab_Modeling_RFC_with_Transform_New.ipynb  iLab_Modeling_RFC_with_Transform_New_Smote.ipynb  iLab_Modeling_SVC.ipynb  iLab_Modeling_SVC_New.ipynb  iLab_Modeling_SVC_with_Transform_New.ipynb
notebooks/MultiCol/: BigDatasetMulticolLogReg0.8.ipynb  BigDatasetMulticolLogRegBase.ipynb  (+14 more)
(+7 files in other folders)
